# GuYanTools

./: .eslintrc.json  .gitignore  .hintrc  .stignore  AGENTS.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  commitlint.config.js  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.js  test.md  tsconfig.json  vite.renderer.func.config.ts
.agents/rules/: annotation-rule.md  builtin-func-rule.md  coding-notes.md  dependency-rule.md  desktop-app-rules.md  diagram-in-markdown.md
.agents/workflows/: feat-development-workflow.md
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop-release.yml
.husky/: commit-msg
.impeccable/: design.json
.impeccable/critique/: 2026-06-10T02-22-16Z__desktop-src-windows-main-pages-home-home-vue.md
.trae/documents/: Flutter 移动端框架与网格拖拽实现方案.md
desktop/: .eslintrc.json  USAGE_EXAMPLE.md  VERIFICATION_CHECKLIST.md  ai_canvas_preview.html  clipboard.html  clipboard_text_preview.html  electron-builder.config.cjs  forge.config.ts  forge.env.d.ts  index.html  index_func.html  index_terminal.html  multi-platform-core.win32-x64-msvc.node  notification.html  package-lock.json  package.json  pin_image.html  pnpm-lock.yaml  pnpm-workspace.yaml  quick_launcher.html  quick_note.html  screenshot.html  splash.html  tray_menu.html  tsconfig.json  vite.main.config.ts  vite.preload-plugin.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.renderer.splash.config.ts  workspace_window.html
desktop/scripts/: build-electron-vite.mjs  check-design-system.mjs  copy-native-modules.js  create-knowledge-large-markdown-fixture.cjs  electron-builder-hooks.cjs  gen_icons.ps1  smoke-screenshot-recognition.cjs  smoke-sync-server-live.cjs  smoke-sync-server-provider.cjs  smoke-sync-server-two-device.cjs  smoke-sync-service-client.cjs  smoke-sync-service-live.cjs  sync-dev-data.cjs  verify-ai-chat.cjs  verify-app-config-persistence.cjs  verify-ci-baseline.cjs  verify-knowledge-editor-foundation.cjs  verify-quick-launch.cjs  verify-screenshot-recognition.cjs  verify-shortcuts.cjs  verify-source-encoding.cjs  verify-sync-center.cjs  verify-sync-mappers.cjs  verify-sync-server-skeleton.cjs  verify-sync-webdav-provider.cjs  verify-workspace-window.cjs
desktop/src/: preload.ts  renderer_func.ts  renderer_splash.ts
docs/: README.md  ftp-client-requirement.md  requirement.md  third_party_login_plan.md
docs/core/: INTEGRATION_GUIDE.md  QUICK_START.md  README.md
docs/desktop/: DESIGN_SYSTEM.md  ISSUES.md  MEMORY_LEAK_FIXES.md  MULTI_DEVICE_CLIPBOARD.md  PLUGIN_ARCHITECTURE_PLAN.md  (+4 more)
mobile/: pubspec.yaml
multi_platform_core/: .gitignore  Cargo.toml  INTEGRATION_GUIDE.md  QUICK_START.md  REFACTOR_PLAN.md  build.rs  index.d.ts  index.js  package.json
multi_platform_core/migrations/: 001_init.sql  002_add_projects.sql  003_add_settings.sql  004_add_home_layout.sql  005_add_background_fields.sql  006_add_todo.sql  007_extend_home_widgets_builtin.sql  008_extend_home_workspace_bg.sql  009_add_plugins_table.sql  010_add_ssh_profiles.sql  011_add_ftp_client.sql  012_add_ssh_port_forwards.sql  013_add_ssh_certificate_paths.sql  014_add_ssh_managed_keys.sql  015_add_host_ca_key_paths.sql  016_extend_ftp_transfer_tree_history.sql  017_add_multi_device_clipboard.sql  018_add_mobile_home_layouts.sql  019_add_ssh_profile_folders.sql  020_add_todo_step_image.sql  021_add_knowledge.sql  022_add_knowledge_quick_notes.sql  023_add_knowledge_search_fts.sql  024_add_ai_chat.sql  025_add_ai_canvas_tables.sql  026_add_ai_research_tables.sql  027_add_ai_memory_projects.sql  028_extend_ftp_persisted_config.sql  029_add_sync_metadata.sql
multi_platform_core/native/: index.d.ts  index.js
multi_platform_core/scripts/: clean-native-artifacts.cjs  patch-index-js.cjs  sync-desktop-artifacts.cjs  write-index-dts.cjs
multi_platform_core/src/: crypto.rs  event.rs  frb_generated.rs  lib.rs  main.rs
multi_platform_core/src/bindings/: flutter.rs  mobile_api.rs  mobile_clipboard.rs  mod.rs  napi.rs
multi_platform_core/src/db/: connection.rs  error.rs  migration.rs  mod.rs
multi_platform_core/src/ftp/: connection.rs  credentials.rs  mod.rs  models.rs  operations.rs  profile.rs  transfer.rs
multi_platform_core/src/ftp/protocol/: ftp_raw.rs  mod.rs  sftp_raw.rs
multi_platform_core/src/models/: ai.rs  home_layout.rs  knowledge.rs  mod.rs  multi_device_clipboard.rs  project.rs  setting.rs  sync.rs  todo.rs  user.rs
multi_platform_core/src/multi_device_clipboard/: discovery.rs  mod.rs  service.rs
multi_platform_core/src/screenshot/: recognition.rs
multi_platform_core/src/services/: ai_service.rs  home_layout_service.rs  knowledge_service.rs  mod.rs  project_service.rs  setting_service.rs  sync_service.rs  todo_service.rs  user_service.rs
multi_platform_core/src/ssh/: connection.rs  credentials.rs  forward_crud.rs  handler.rs  host_certificate.rs  key_manager.rs  known_hosts.rs  mod.rs  models.rs  port_forward.rs  profile.rs
multi_platform_core/src/terminal/: mod.rs
scripts/: build-mobile-rust-android.ps1  mobile-dev-android.ps1
src/: main.ts  renderer.ts
sync_server/: .env.example  Cargo.toml  README.md
sync_server/.local/: docker-compose.yml
sync_server/migrations/: 001_initial.sql  002_add_client_op_response.sql
sync_server/scripts/: deploy-ubuntu.sh  smoke-local.ps1
sync_server/src/: config.rs  main.rs
sync_server/src/routes/: mod.rs
(+649 files in other folders)
