[package]
name = "multi-platform-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# SQLite 核心
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.48", features = ["full"] }

# Electron 绑定（napi-rs）
napi = { version = "2", features = ["tokio_rt"], optional = true }
napi-derive = { version = "2", optional = true }

# Flutter 绑定
flutter_rust_bridge = { version = "2", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
flutter = ["dep:flutter_rust_bridge"]
