[package]
name = "multi-platform-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# SQLite core
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
portable-pty = "0.9"

# SSH client (pure Rust, no system library dependency)
russh = "0.49"
russh-keys = "0.49"
ssh-key = { version = "0.6", features = ["std", "ed25519", "ecdsa", "rsa", "getrandom"] }
# russh-sftp reserved for future SFTP file browser feature (actual crate version series is 2.x)
russh-sftp = "2"
suppaftp = { version = "6", features = ["async", "async-native-tls"] }
# Required by russh Handler trait
async-trait = "0.1"
async-std = "1"

# System keychain for credential storage (cross-platform)
keyring = "3"

# UUID for SSH profile IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Electron bindings (napi-rs)
napi = { version = "2", features = ["tokio_rt"], optional = true }
napi-derive = { version = "2", optional = true }

# Flutter bindings
flutter_rust_bridge = { version = "2", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
flutter = ["dep:flutter_rust_bridge"]

[patch.crates-io]
russh = { path = "vendor/russh-0.49.2" }
