[package]
name = "multi-platform-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# SQLite core
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
portable-pty = { version = "0.9", optional = true }

# SSH client (pure Rust, no system library dependency)
russh = { version = "0.49", optional = true }
russh-keys = { version = "0.49", optional = true }
ssh-key = { version = "0.6", features = ["std", "ed25519", "ecdsa", "rsa", "getrandom"], optional = true }
# russh-sftp reserved for future SFTP file browser feature (actual crate version series is 2.x)
russh-sftp = { version = "2", optional = true }
suppaftp = { version = "6", features = ["async", "async-native-tls"], optional = true }
# Required by russh Handler trait
async-trait = { version = "0.1", optional = true }
async-std = { version = "1", optional = true }

# System keychain for credential storage (cross-platform)
keyring = { version = "3", optional = true }

# UUID for SSH profile IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
mdns-sd = "0.19"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Electron bindings (napi-rs)
napi = { version = "2", features = ["tokio_rt"], optional = true }
napi-derive = { version = "2", optional = true }

# Flutter bindings
flutter_rust_bridge = { version = "=2.12.0", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
desktop-native = [
    "dep:portable-pty",
    "dep:russh",
    "dep:russh-keys",
    "dep:ssh-key",
    "dep:russh-sftp",
    "dep:suppaftp",
    "dep:async-trait",
    "dep:async-std",
    "dep:keyring",
]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build", "desktop-native"]
flutter = ["dep:flutter_rust_bridge"]

[patch.crates-io]
russh = { path = "vendor/russh-0.49.2" }
