[package]
name = "guyantools-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
anyhow = "1"
argon2 = "0.5"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
http = "1"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
